--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,19 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>load_ads</module>
+        <module>save_ads</module>
+        <module>model</module>
     </modules>
 
     <properties>
+        <java.version>1.8</java.version>
         <maven.compile.source>1.8</maven.compile.source>
         <maven.compile.target>1.8</maven.compile.target>
 
         <spring-boot-starter.version>2.2.0.RELEASE</spring-boot-starter.version>
+        <spring-data-jpa.version>2.2.0.RELEASE</spring-data-jpa.version>
 
+        <postgresql.version>42.2.8</postgresql.version>
         <log4j-core.version>2.12.1</log4j-core.version>
         <lombok.version>1.18.10</lombok.version>
         <jsoup.version>1.11.3</jsoup.version>
@@ -29,6 +34,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring-data-jpa.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jsoup</groupId>
@@ -45,6 +60,16 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.gd</groupId>
+                <artifactId>save_ads</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gd</groupId>
+                <artifactId>model</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
