--- a/save_ads/pom.xml
+++ b/save_ads/pom.xml
@@ -8,21 +8,22 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>load_ads</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>save_ads</artifactId>
+
     <properties>
         <java.version>1.8</java.version>
         <maven.compile.source>1.8</maven.compile.source>
         <maven.compile.target>1.8</maven.compile.target>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -33,15 +34,14 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.gd</groupId>
-            <artifactId>save_ads</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>com.gd</groupId>
             <artifactId>model</artifactId>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
