--- a/save_ads/src/main/resources/application.yml
+++ b/save_ads/src/main/resources/application.yml
@@ -1,9 +1,19 @@
 spring:
   jpa:
     database: POSTGRESQL
-    show-sql: true
+    show-sql: false
     hibernate:
-      ddl-auto: create
+      ddl-auto:
+#    properties:
+#      hibernate:
+#        cache:
+#          region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
+#          use_second_level_cache: true
+#          use_query_cache: true
+#      javax:
+#        persistence:
+#          sharedCache:
+#            mode: ALL
   datasource:
     platform: postgres
     url: jdbc:postgresql://localhost:5432/avito-db
