--- a/save_ads/src/main/resources/application.yml
+++ b/save_ads/src/main/resources/application.yml
@@ -4,19 +4,12 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto:
-#    properties:
-#      hibernate:
-#        cache:
-#          region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
-#          use_second_level_cache: true
-#          use_query_cache: true
-#      javax:
-#        persistence:
-#          sharedCache:
-#            mode: ALL
   datasource:
     platform: postgres
     url: jdbc:postgresql://localhost:5432/avito-db
     username: postgres
     password: postgres
     driverClassName: org.postgresql.Driver
+  cache:
+    ehcache:
+      config: classpath:ehcache.xml
