Added some search queries

--- a/save_ads/src/main/resources/application.yml
+++ b/save_ads/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
           default:
             directory__provider: filesystem
             indexBase: indexpath
+            indexwriter:
+              infostream: true
+
   datasource:
     platform: postgres
     url: jdbc:postgresql://localhost:5432/avito-db
